--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Me"></meta>
         <title>My first page</title>
+        <link rel="icon" href="logos-png.png" type="image/x-icon"/>
     </head>
     <body>
         <h1>Hello world</h1>
