--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Me"></meta>
         <title>My first page</title>
         <link rel="icon" href="logos-png.png" type="image/x-icon"/>
     </head>
+
     <body>
-        <h1>Hello world</h1>
-        <p>This is my first page. </p>
+        <h1>Hi there..!</h1>
+        <hr>
+        <p>This is Manisha </p>
+        <h2>Learning HTML concepts.</h2>
+        <p>Setup and use of HTML </p>
+        <h3>Dummy text</h3>
+        <p><em><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry</em>.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. &nbsp; It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<hr> &copy; Lorem Ipsum </p>
+        <hr>
     </body>
+
 </html>
