feat - html basics: text basics, elements, white spacing, inline and block elements, html attributes. && checked with w3s validator.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Me"></meta>
+        <meta name="author" content="Me">
         <title>My first page</title>
-        <link rel="icon" href="logos-png.png" type="image/x-icon"/>
+        <link rel="icon" href="logos-png.png" type="image/x-icon">
     </head>
 
     <body>
@@ -15,7 +15,17 @@
         <h2>Learning HTML concepts.</h2>
         <p>Setup and use of HTML </p>
         <h3>Dummy text</h3>
-        <p><em><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry</em>.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. &nbsp; It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<hr> &copy; Lorem Ipsum </p>
+        <p>
+            <em>
+              <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry
+            </em>.
+            <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            &nbsp; It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+          </p>
+          <hr>
+          &copy; Lorem Ipsum
+          
         <hr>
     </body>
 
