--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>This is Manisha </p>
         <h2>Learning HTML concepts.</h2>
         <p>Setup and use of HTML </p>
-        <h3>Dummy text</h3>
+        <h3>Dummy text...</h3>
         <p>
             <em>
               <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry
