--- a/index.html
+++ b/index.html
@@ -1,32 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="Me">
-        <title>My first page</title>
-        <link rel="icon" href="logos-png.png" type="image/x-icon">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Me">
+    <title>My first page</title>
+    <link rel="icon" href="logos-png.png" type="image/x-icon">
+</head>
 
-    <body>
-        <h1>Hi there..!</h1>
-        <hr>
-        <p>This is Manisha </p>
-        <h2>Learning HTML concepts.</h2>
-        <p>Setup and use of HTML </p>
-        <h3>Dummy text</h3>
-        <p>
-            <em>
-              <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry
-            </em>.
-            <br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            &nbsp; It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-          </p>
-          <hr>
-          &copy; Lorem Ipsum
-          
-        <hr>
-    </body>
+<body>
+
+    <h1>Hi there..! This is Manisha </h1>
+    <hr>
+    <h4>Learning HTML concepts.</h4>
+    <p>
+        This is <strong>Ordered list</strong>
+    <ol>
+        <li>Setup and head, body elements</li>
+        <br>
+        <li> Text basics </li>
+        <br>
+        <li> Elements </li>
+        <br>
+        <li> White spacing, inline and block elements</li>
+        <br>
+        <li>html attribute </li>
+        <br>
+
+    </ol>
+
+    <hr>
+
+    This is <strong>Unordered list</strong>
+
+    <ul>
+        <li>Setup and head, body elements</li>
+        <br>
+        <li> Text basics </li>
+        <br>
+        <li> Elements </li>
+        <br>
+        <li> White spacing, inline and block elements</li>
+        <br>
+        <li>html attribute </li>
+        <br>
+    </ul>
+    </p>
+
+    <hr>
+    This is <strong>Description list</strong>
+    <dl>
+        <dt>Setup </dt>
+        <dd>Setup consists of installation of vs code and basics of html</dd>
+        <br>
+        <dt> Text basics </dt>
+        <dd>Some text basics in html</dd>
+        <br>
+        <dt> Elements </dt>
+        <dd>Head elements and body elements</dd>
+        <br>
+        <dt> White spacing</dt>
+        <dd>Inline and block elements</dd>
+        <br>
+        <dt>html attribute </dt>
+        <dd>Some of the html attributes</dd>
+        <br>
+        </ul>
+        </p>
+
+</body>
 
 </html>
