feat: list basics.

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
     This is <strong>Description list</strong>
     <dl>
         <dt>Setup </dt>
-        <dd>Setup consists of installation of vs code and basics of html</dd>
+        <dd>Setup consists of installation of vs code and basics of html.</dd>
         <br>
         <dt> Text basics </dt>
-        <dd>Some text basics in html</dd>
+        <dd>Some text basics in html.</dd>
         <br>
         <dt> Elements </dt>
-        <dd>Head elements and body elements</dd>
+        <dd>Head elements and body elements.</dd>
         <br>
         <dt> White spacing</dt>
-        <dd>Inline and block elements</dd>
+        <dd>Inline and block elements.</dd>
         <br>
         <dt>html attribute </dt>
-        <dd>Some of the html attributes</dd>
+        <dd>Some of the html attributes.</dd>
         <br>
         </ul>
         </p>
