--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <meta name="author" content="Me">
     <title>My first page</title>
     <link rel="icon" href="logos-png.png" type="image/x-icon">
+    <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
 <body>
 
     <h1>Hi there..! This is Manisha </h1>
     <hr>
+    <p><a href="aboutme.html">About me</a></p>
     <h4>Learning HTML concepts.</h4>
     <p>
+        I have learned from youtube channel click the <a href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy"> link</a> and the resource I have learned is <abbr title="Mozilla Developer Network"> MDN</abbr>  
+    
+    </p>
+    <p>
+
         This is <strong>Ordered list</strong>
     <ol>
         <li>Setup and head, body elements</li>
@@ -51,19 +58,19 @@
     This is <strong>Description list</strong>
     <dl>
         <dt>Setup </dt>
-        <dd>Setup consists of installation of vs code and basics of html</dd>
+        <dd>Setup consists of installation of vs code and basics of html.</dd>
         <br>
         <dt> Text basics </dt>
-        <dd>Some text basics in html</dd>
+        <dd>Some text basics in html.</dd>
         <br>
         <dt> Elements </dt>
-        <dd>Head elements and body elements</dd>
+        <dd>Head elements and body elements.</dd>
         <br>
         <dt> White spacing</dt>
-        <dd>Inline and block elements</dd>
+        <dd>Inline and block elements.</dd>
         <br>
         <dt>html attribute </dt>
-        <dd>Some of the html attributes</dd>
+        <dd>Some of the html attributes.</dd>
         <br>
         </ul>
         </p>
