--- a/index.html
+++ b/index.html
@@ -13,67 +13,111 @@
 
     <h1>Hi there..! This is Manisha </h1>
     <hr>
+
     <p><a href="aboutme.html">About me</a></p>
     <h4>Learning HTML concepts.</h4>
-    <p>
-        I have learned from youtube channel click the <a href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy"> link</a> and the resource I have learned is <abbr title="Mozilla Developer Network"> MDN</abbr>  
-    
-    </p>
-    <p>
-
-        This is <strong>Ordered list</strong>
-    <ol>
-        <li>Setup and head, body elements</li>
-        <br>
-        <li> Text basics </li>
-        <br>
-        <li> Elements </li>
-        <br>
-        <li> White spacing, inline and block elements</li>
-        <br>
-        <li>html attribute </li>
-        <br>
-
-    </ol>
 
     <hr>
+    <nav>
+        <ul>
 
-    This is <strong>Unordered list</strong>
-
-    <ul>
-        <li>Setup and head, body elements</li>
-        <br>
-        <li> Text basics </li>
-        <br>
-        <li> Elements </li>
-        <br>
-        <li> White spacing, inline and block elements</li>
-        <br>
-        <li>html attribute </li>
-        <br>
-    </ul>
-    </p>
-
-    <hr>
-    This is <strong>Description list</strong>
-    <dl>
-        <dt>Setup </dt>
-        <dd>Setup consists of installation of vs code and basics of html.</dd>
-        <br>
-        <dt> Text basics </dt>
-        <dd>Some text basics in html.</dd>
-        <br>
-        <dt> Elements </dt>
-        <dd>Head elements and body elements.</dd>
-        <br>
-        <dt> White spacing</dt>
-        <dd>Inline and block elements.</dd>
-        <br>
-        <dt>html attribute </dt>
-        <dd>Some of the html attributes.</dd>
-        <br>
+            <li><a href="#ol">Ordered list</a></li>
+            <li><a href="#ul">Unordered list</a></li>
+            <li><a href="#dl">Description list</a></li>
         </ul>
+    </nav>
+    <hr>
+
+    <p>
+        I have learned from youtube channel click the <a
+            href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy"> link</a> and the
+        resource I have learned is <abbr title="Mozilla Developer Network"> MDN</abbr>
+
+    </p>
+
+    <section id="ol">
+
+        <p>
+
+            This is <strong>Ordered list</strong>
+        <ol>
+            <li>Setup and head, body elements</li>
+            <br>
+            <li> Text basics </li>
+            <br>
+            <li> Elements </li>
+            <br>
+            <li> White spacing, inline and block elements</li>
+            <br>
+            <li>html attribute </li>
+            <br>
+
+        </ol>
+
         </p>
+
+    </section>
+
+    <hr>
+
+    <section id="ul">
+        <p>
+
+            This is <strong>Unordered list</strong>
+
+        <ul>
+            <li>Setup and head, body elements</li>
+            <br>
+            <li> Text basics </li>
+            <br>
+            <li> Elements </li>
+            <br>
+            <li> White spacing, inline and block elements</li>
+            <br>
+            <li>html attribute </li>
+            <br>
+
+        </ul>
+
+        </p>
+
+    </section>
+
+    <hr>
+
+    <section id="dl">
+
+        <p>
+
+        This is <strong>Description list</strong>
+
+        <dl>
+            <dt>Setup </dt>
+            <dd>Setup consists of installation of vs code and basics of html.</dd>
+            <br>
+
+            <dt> Text basics </dt>
+            <dd>Some text basics in html.</dd>
+            <br>
+
+            <dt> Elements </dt>
+            <dd>Head elements and body elements.</dd>
+            <br>
+
+            <dt> White spacing</dt>
+            <dd>Inline and block elements.</dd>
+            <br>
+
+            <dt>html attribute </dt>
+            <dd>Some of the html attributes.</dd>
+            <br>
+
+        </dl>
+
+        </p>
+    </section>
+    <hr>
+    <p><a href="#">Back to top</a></p>
 
 </body>
 
