feat: adding images to the website.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 
 <body>
 
-    <h1>Hi there..! This is Manisha </h1>
+    <h1>Hi there..! This is Manisha</h1>
     <hr>
 
     <p><a href="aboutme.html">About me</a></p>
     <h4>Learning HTML concepts.</h4>
 
+    <img src="/img/htmlogo.png" alt="html logo" title="html" width="50" height="50">
+
+    <figure>
+        <img src="/img/bhtml.png" alt="html logo" title="html" width="50" height="50" loading="lazy">
+        <figcaption>Html image</figcaption>
+    </figure>
+
     <hr>
+    <h3>Lists</h3>
     <nav>
         <ul>
-
             <li><a href="#ol">Ordered list</a></li>
             <li><a href="#ul">Unordered list</a></li>
             <li><a href="#dl">Description list</a></li>
@@ -29,93 +36,61 @@
     <hr>
 
     <p>
-        I have learned from youtube channel click the <a
-            href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy"> link</a> and the
-        resource I have learned is <abbr title="Mozilla Developer Network"> MDN</abbr>
-
+        I have learned from YouTube channel click the <a
+            href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy">link</a> and the
+        resource I have learned is <abbr title="Mozilla Developer Network">MDN</abbr>
     </p>
+    <figure>
+        <figcaption>Example of HTML code</figcaption>
+        <code>&lt;h1&gt;Hello world&lt;/h1&gt;</code>
+    </figure>
 
     <section id="ol">
-
-        <p>
-
-            This is <strong>Ordered list</strong>
+        <h2>Ordered List</h2>
         <ol>
             <li>Setup and head, body elements</li>
-            <br>
-            <li> Text basics </li>
-            <br>
-            <li> Elements </li>
-            <br>
-            <li> White spacing, inline and block elements</li>
-            <br>
-            <li>html attribute </li>
-            <br>
-
+            <li>Text basics</li>
+            <li>Elements</li>
+            <li>White spacing, inline and block elements</li>
+            <li>HTML attribute</li>
         </ol>
-
-        </p>
-
     </section>
 
     <hr>
 
     <section id="ul">
-        <p>
-
-            This is <strong>Unordered list</strong>
-
+        <h2>Unordered List</h2>
         <ul>
             <li>Setup and head, body elements</li>
-            <br>
-            <li> Text basics </li>
-            <br>
-            <li> Elements </li>
-            <br>
-            <li> White spacing, inline and block elements</li>
-            <br>
-            <li>html attribute </li>
-            <br>
-
+            <li>Text basics</li>
+            <li>Elements</li>
+            <li>White spacing, inline and block elements</li>
+            <li>HTML attribute</li>
         </ul>
-
-        </p>
-
     </section>
 
     <hr>
 
     <section id="dl">
-
-        <p>
-
-        This is <strong>Description list</strong>
-
+        <h2>Description List</h2>
         <dl>
-            <dt>Setup </dt>
-            <dd>Setup consists of installation of vs code and basics of html.</dd>
-            <br>
+            <dt>Setup</dt>
+            <dd>Setup consists of installation of VS Code and basics of HTML.</dd>
 
-            <dt> Text basics </dt>
-            <dd>Some text basics in html.</dd>
-            <br>
+            <dt>Text basics</dt>
+            <dd>Some text basics in HTML.</dd>
 
-            <dt> Elements </dt>
+            <dt>Elements</dt>
             <dd>Head elements and body elements.</dd>
-            <br>
 
-            <dt> White spacing</dt>
+            <dt>White spacing</dt>
             <dd>Inline and block elements.</dd>
-            <br>
 
-            <dt>html attribute </dt>
-            <dd>Some of the html attributes.</dd>
-            <br>
-
+            <dt>HTML attribute</dt>
+            <dd>Some of the HTML attributes.</dd>
         </dl>
-
-        </p>
     </section>
+
     <hr>
     <p><a href="#">Back to top</a></p>
 
