--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr>
 
     <p><a href="aboutme.html">About me</a></p>
-    <h4>Learning HTML concepts.</h4>
+    <h4>Learning HTML concepts..</h4>
 
     <img src="/img/htmlogo.png" alt="html logo" title="html" width="50" height="50">
 
