feat: semantic tags.

--- a/index.html
+++ b/index.html
@@ -10,90 +10,99 @@
 </head>
 
 <body>
+    <header>
 
-    <h1>Hi there..! This is Manisha</h1>
+        <h1>Hi there..! This is Manisha</h1>
+
+        <h4>Learning HTML concepts.</h4>
+
+        <hr>
+
+        <nav aria-labelledby="primary-navigation">
+            <h3 id="primary-navigation">Lists</h3>
+            <ul>
+                <li><a href="#ol">Ordered list</a></li>
+                <li><a href="#ul">Unordered list</a></li>
+                <li><a href="#dl">Description list</a></li>
+            </ul>
+        </nav>
+        <hr>
+    </header>
+
+    <main>
+
+
+        <p><a href="aboutme.html">About me</a></p>
+        <img src="/img/htmlogo.png" alt="html logo" title="html" width="150" height="150">
+
+        <figure>
+            <img src="/img/bhtml.png" alt="html logo" title="html" width="250" height="250" loading="lazy">
+            <figcaption>Html image</figcaption>
+        </figure>
+
+        <p>
+            I have learned from YouTube channel click the <a
+                href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy">link</a> and
+            the
+            resource I have learned is <abbr title="Mozilla Developer Network">MDN</abbr>
+        </p>
+
+        <figure>
+            <figcaption>Example of HTML code</figcaption>
+            <code>&lt;h1&gt;Hello world&lt;/h1&gt;</code>
+        </figure>
+
+        <section id="ol">
+            <h2>Ordered List</h2>
+            <ol>
+                <li>Setup and head, body elements</li>
+                <li>Text basics</li>
+                <li>Elements</li>
+                <li>White spacing, inline and block elements</li>
+                <li>HTML attribute</li>
+            </ol>
+        </section>
+
+        <hr>
+
+        <section id="ul">
+            <h2>Unordered List</h2>
+            <ul>
+                <li>Setup and head, body elements</li>
+                <li>Text basics</li>
+                <li>Elements</li>
+                <li>White spacing, inline and block elements</li>
+                <li>HTML attribute</li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <section id="dl">
+            <h2>Description List</h2>
+            <dl>
+                <dt>Setup</dt>
+                <dd>Setup consists of installation of VS Code and basics of HTML.</dd>
+
+                <dt>Text basics</dt>
+                <dd>Some text basics in HTML.</dd>
+
+                <dt>Elements</dt>
+                <dd>Head elements and body elements.</dd>
+
+                <dt>White spacing</dt>
+                <dd>Inline and block elements.</dd>
+
+                <dt>HTML attribute</dt>
+                <dd>Some of the HTML attributes.</dd>
+            </dl>
+        </section>
+    </main>
+
     <hr>
-
-    <p><a href="aboutme.html">About me</a></p>
-    <h4>Learning HTML concepts.</h4>
-
-    <img src="/img/htmlogo.png" alt="html logo" title="html" width="50" height="50">
-
-    <figure>
-        <img src="/img/bhtml.png" alt="html logo" title="html" width="50" height="50" loading="lazy">
-        <figcaption>Html image</figcaption>
-    </figure>
-
-    <hr>
-    <h3>Lists</h3>
-    <nav>
-        <ul>
-            <li><a href="#ol">Ordered list</a></li>
-            <li><a href="#ul">Unordered list</a></li>
-            <li><a href="#dl">Description list</a></li>
-        </ul>
-    </nav>
-    <hr>
-
-    <p>
-        I have learned from YouTube channel click the <a
-            href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy">link</a> and the
-        resource I have learned is <abbr title="Mozilla Developer Network">MDN</abbr>
-    </p>
-    
-    <figure>
-        <figcaption>Example of HTML code</figcaption>
-        <code>&lt;h1&gt;Hello world&lt;/h1&gt;</code>
-    </figure>
-
-    <section id="ol">
-        <h2>Ordered List</h2>
-        <ol>
-            <li>Setup and head, body elements</li>
-            <li>Text basics</li>
-            <li>Elements</li>
-            <li>White spacing, inline and block elements</li>
-            <li>HTML attribute</li>
-        </ol>
-    </section>
-
-    <hr>
-
-    <section id="ul">
-        <h2>Unordered List</h2>
-        <ul>
-            <li>Setup and head, body elements</li>
-            <li>Text basics</li>
-            <li>Elements</li>
-            <li>White spacing, inline and block elements</li>
-            <li>HTML attribute</li>
-        </ul>
-    </section>
-
-    <hr>
-
-    <section id="dl">
-        <h2>Description List</h2>
-        <dl>
-            <dt>Setup</dt>
-            <dd>Setup consists of installation of VS Code and basics of HTML.</dd>
-
-            <dt>Text basics</dt>
-            <dd>Some text basics in HTML.</dd>
-
-            <dt>Elements</dt>
-            <dd>Head elements and body elements.</dd>
-
-            <dt>White spacing</dt>
-            <dd>Inline and block elements.</dd>
-
-            <dt>HTML attribute</dt>
-            <dd>Some of the HTML attributes.</dd>
-        </dl>
-    </section>
-
-    <hr>
-    <p><a href="#">Back to top</a></p>
+    <footer>
+        <p><a href="#">Back to top</a></p>
+    </footer>
 
 </body>
 
