--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </figure>
 
         <p>
-            I have learned from YouTube channel <a href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy">Html course</a> and
+            I have learned from YouTube channel <a
+                href="https://www.youtube.com/watch?v=tfN9gPFmUfA&list=PLla-GdVgzZZV-z0Gxc7rkrV4cuqYSNZMy">Html
+                course</a> and
             the resource I have learned is <abbr title="Mozilla Developer Network">MDN</abbr>
         </p>
 
@@ -134,6 +136,19 @@
                 </dl>
             </section>
         </article>
+        <hr>
+        <article>
+            <h2>Contact me</h2>
+            <p>
+                I would like to contact me..!
+            </p>
+            <form action="https://httpbin.org/get" method="get">
+                <label for="firstName">FirstName:</label>
+                <input type="text" name="firstName" id="firstName" placeholder="name">
+
+            </form>
+        </article>
+
     </main>
 
     <hr>
